--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             
             <div class="bento-item project-image">
-                <img src="https://i.imgur.com/gK1q3qP.png" alt="Project 2 Placeholder">
+                <img src="https://i.imgur.com/gK1q3qP.png" alt="Project 2">
             </div>
         </main>
     </div>
