--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <div class="container">
         <aside class="profile-sidebar">
+            <div class="avatar-container">
+                </div>
             <h1>Huỳnh Mai Ánh Dương</h1>
             <p class="username">@peaciacake</p>
             <p class="subtitle">Sinh viên ngành Công nghệ Đa phương tiện</p>
@@ -64,20 +66,13 @@
                 </div>
             </div>
 
-            <div class="bento-item grid-row-span-2">
+            <div class="bento-item grid-col-span-3 grid-row-span-2">
                 <h3><i class="fas fa-users icon"></i> Kỹ năng mềm</h3>
                 <div class="chart-container">
                     <canvas id="softSkillsChart"></canvas>
                 </div>
             </div>
-            
-            <div class="bento-item project-image">
-                <img src="https://raw.githubusercontent.com/baochau-cmyk/baochau-cmyk/main/hinhdong.png" alt="Project 1">
-            </div>
-            
-            <div class="bento-item project-image">
-                <img src="https://i.imgur.com/gK1q3qP.png" alt="Project 2">
-            </div>
+
         </main>
     </div>
 
